Fix spacing

--- a/src/components/Billing/Details/Diagram.scss
+++ b/src/components/Billing/Details/Diagram.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/variables';
+
 .diagram-container {
   display: flex;
   justify-content: space-between;
@@ -9,7 +11,7 @@
     top: 50%;
     width: 95%;
     height: 1px;
-    background-color: #dadada;
+    background-color: $gray-300;
   }
 }
 
@@ -17,10 +19,11 @@
   position: relative;
   z-index: 5;
   background: white;
-  border: 2px solid #dadada;
+  border: 2px solid $gray-300;
   border-radius: 50%;
   padding: 0.45rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: $gray-900;
 }
